1.0.2
	Added: nummer voor het aantal aanmeldingen
	Bugfixes: diverse

1.0.1
	Update: better message when you did not select a membergroup
	Added: email to memberlist, to avoid double names

1.0
	Init release. 
	