@@ -1,6 +1,8 @@
 1.0.2
 	Added: nummer voor het aantal aanmeldingen
 	Bugfixes: diverse
+	Added : {exp:dun_rsvp:if_rsvp_enabled}
+	Updated: alleen de custom velden tonen wanneer deze allen zijn gevuld
 
 1.0.1
 	Update: better message when you did not select a membergroup
@@ -8,4 +10,3 @@
 
 1.0
 	Init release. 
-	
